# ACIS-Tools

./: .gitignore  AcisCanTools.py  README.md  fieldLogger.py  liveTest.py  monitor.py  pyproject.toml  simTest.py  test.py  test_acis_can_tools.py
deploy/: logOne.py  logThree.py  logTwo.py  unattendedLog.py
logs/: _var_tmp_MGate5118_j1939_cap (1).xlsx  external_data.csv  field_test.csv  simTest.log.csv
old/: logger.py  main.py  parser.py
plotting/: AcisCanTools.py  excel-NOx.py  filterPlot.py  plotFFT.py  signalGen.py
tools/: simTest.py
