[project]
name = "acis-tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-can>=4.5.0",
    "rocket-fft>=0.2.5",
    "scipy>=1.15.3",
]

[dependency-groups]
dev = [
    "matplotlib>=3.10.3",
    "openpyxl>=3.1.5",
    "pandas>=2.3.0",
]
