[project]
name = "AcisCanTools"
version = "0.1.0"
description = "A Python toolkit for logging, parsing, simulating, and analyzing CAN (Controller Area Network) data."
requires-python = ">=3.12"
dependencies = [
    "python-can>=4.5.0",
]

[dependency-groups]
dev = [
    "matplotlib>=3.10.3",
    "openpyxl>=3.1.5",
    "pandas>=2.3.0",
]

[tool.setuptools.packages.find]
include = ["AcisCanTools"]
exclude = ["plotting", "tests", "logs", "assets"]
